FIX: Problem of scroll due to old css rules and add smooth scroll on mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -1,4 +1,3 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,11 +5,4 @@
 
 body {
     font-family: 'lato', sans-serif;
-    height: 100vh;
-    width: 100vw;
-    overflow: hidden!important;
-}
-#app {
-    height: 100%;
-    width: 100%;
 }
